fixed alignment issue

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -31,6 +31,8 @@ body {
   color: #fff;
   text-decoration: underline;
   text-decoration-color: #fff;
+  margin-top: 5px;
+  font-size: 25px;
 }
 
 .redBorderTxt {
